--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ai-sdk/anthropic": "^0.0.48",
     "@ai-sdk/openai": "^0.0.54",
     "@deepgram/sdk": "^3.6.0",
+    "@supabase/supabase-js": "^2.58.0",
     "ai": "^3.3.20",
     "date-fns": "^3.6.0",
     "firebase": "^10.13.0",
